--- a/Debug_Unity/Debug_Unity.csproj
+++ b/Debug_Unity/Debug_Unity.csproj
@@ -78,8 +78,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\NumberPad.cs" />
-    <Compile Include="Assets\Scripts\Numbering.cs" />
     <Compile Include="Assets\Scripts\Objects\FireplugAnim.cs" />
     <Compile Include="Assets\Scripts\Objects\LEDExample.cs" />
     <Compile Include="Assets\Scripts\Objects\NipperExample.cs" />
@@ -87,6 +85,8 @@
     <Compile Include="Assets\Scripts\Player\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerItems.cs" />
     <Compile Include="Assets\Scripts\Thunder.cs" />
+    <Compile Include="Assets\Temp\NumButton.cs" />
+    <Compile Include="Assets\Temp\NumberPad.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
