--- a/Debug_Unity/Debug_Unity.csproj
+++ b/Debug_Unity/Debug_Unity.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Assets\Scripts\Player\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerItems.cs" />
     <Compile Include="Assets\Scripts\Thunder.cs" />
+    <Compile Include="Assets\Temp\DoorOpen.cs" />
     <Compile Include="Assets\Temp\NumButton.cs" />
     <Compile Include="Assets\Temp\NumberPad.cs" />
   </ItemGroup>
