--- a/Debug_Unity/Debug_Unity.csproj
+++ b/Debug_Unity/Debug_Unity.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\Scripts\Objects\LEDExample.cs" />
     <Compile Include="Assets\Scripts\Objects\NipperExample.cs" />
     <Compile Include="Assets\Scripts\Objects\ThrowObject.cs" />
+    <Compile Include="Assets\Scripts\Objects\ThunderTrigger.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerItems.cs" />
     <Compile Include="Assets\Scripts\Thunder.cs" />
