--- a/Debug_Unity/Debug_Unity.Editor.csproj
+++ b/Debug_Unity/Debug_Unity.Editor.csproj
@@ -123,11 +123,22 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\ex\SpriteOutlineFx-master\Assets\SpriteOutlineFx\Editor\SpriteOutlineFxEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\CraftSystemEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\EquipmentSystemEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\HotbarEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\IM_Manager.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\InventoryDesignEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\InventoryEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\StorageInventoryEditor.cs" />
+    <Compile Include="Assets\InventoryMaster\Editor\TooltipEditor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\ex\SpriteOutlineFx-master\Assets\SpriteOutlineFx\Shader\SpriteOutlineFx.shader" />
-    <None Include="Assets\ex\SpriteOutlineFx-master\Assets\Test\Sprites-NoAlpha.shader" />
+    <None Include="Assets\Grom.shader" />
+    <None Include="Assets\InventoryMaster\readme.txt" />
+    <None Include="Assets\OutlineEffect\Resources\OutlineBufferCullOffShader.shader" />
+    <None Include="Assets\OutlineEffect\Resources\OutlineBufferShader.shader" />
+    <None Include="Assets\OutlineEffect\Resources\OutlineShader.shader" />
+    <None Include="Assets\Particles\Shared\Shaders\SurfaceShader_VC.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
